<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TPExamples</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="start_activity">Запуск activity</string>
    <string name="start_activity_for_result">Запуск activity с получением результата</string>
    <string name="return_to_activity">Вернуться с результатом</string>
    <string name="start_browser">Запуск браузера</string>
    <string name="edit_text">Текст для тестов</string>
    <string name="started_activity_text">Я запущена с помощью интента из MainActivity</string>
    <string name="edit_text_result">Результат</string>
    <string name="start_activity_with_fragment">Activity с фрагментами</string>
    <string name="start_handler">Запуск Handler</string>
    <string name="start_async_task">Запуск AsyncTask</string>
    <string name="understood">Понял</string>
    <string name="dialog_activity">Утром плохо, а вечером хорошо - верный признак дурного человека. Вот уж если наоборот - если по утрам человек бодрится и весь в надеждах, а к вечеру его одолевает изнеможение - это уж точно человек дрянь, деляга и посредственность. Гадок мне этот человек. Не знаю как вам, а мне гадок.
Конечно, бывают и такие, кому одинаково любо и утром, и вечером, и восходу они рады, и закату тоже рады, - так это уж просто мерзавцы, о них и говорить-то противно. Ну уж, а если кому одинаково скверно - и утром, и вечером - тут уж я не знаю, что и сказать, это уж конченый подонок и мудозвон.</string>

    <string name="preferences_from_xml">Preference/1. Preferences from XML</string>
    <string name="launching_preferences">Preference/2. Launching preferences</string>
    <string name="preference_dependencies">Preference/3. Preference dependencies</string>
    <string name="default_values">Preference/4. Default values</string>
    <string name="preferences_from_code">Preference/5. Preferences from code</string>
    <string name="advanced_preferences">Preference/6. Advanced preferences</string>
    <string name="fragment_preferences">Preference/7. Fragment</string>
    <string name="preference_with_headers">Preference/8. Headers</string>
    <string name="switch_preference">Preference/9. Switch</string>
    <string name="launch_preference_activity">Launch PreferenceActivity</string>
    <string name="counter_value_is">The counter value is</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="title_switch_preference">Switch preference</string>
    <string name="summary_switch_preference">This is a switch</string>
    <string name="summary_switch_preference_yes_no">This is a switch with custom text</string>
    <string name="title_yesno_preference">Yes or no preference</string>
    <string name="summary_yesno_preference">An example that uses a yes/no dialog</string>
    <string name="dialog_title_yesno_preference">Do you like bananas?</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="example_preference_dependency">Example preference dependency</string>
    <string name="title_wifi">WiFi</string>
    <string name="title_wifi_settings">WiFi settings</string>
    <string name="default_value_list_preference">beta</string>
    <string name="default_value_edittext_preference">Default value</string>

    <string-array name="entries_list_preference">
        <item>Alpha Option 01</item>
        <item>Beta Option 02</item>
        <item>Charlie Option 03</item>
    </string-array>

    <string-array name="entryvalues_list_preference">
        <item>alpha</item>
        <item>beta</item>
        <item>charlie</item>
    </string-array>

    <string name="reset_button">Reset</string>
</resources>
