<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/start_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_activity" />

        <Button
            android:id="@+id/start_activity_for_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_activity_for_result" />

        <Button
            android:id="@+id/start_browser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_browser" />

        <Button
            android:id="@+id/start_fragment_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/start_activity_with_fragment" />


        <Button
            android:id="@+id/start_handler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/start_handler" />

        <Button
            android:id="@+id/start_async_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/start_async_task" />

        <Button
            android:id="@+id/start_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/start_service" />

        <Button
            android:id="@+id/start_bound_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/start_bound_service" />

        <Button
            android:id="@+id/unbound_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/unbound_service" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:indeterminate="true"></ProgressBar>

    </LinearLayout>
</ScrollView>